# clinical_trial_summarise_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  init_project.sh  pyproject.toml  run_api.sh
.github/workflows/: ci.yml
app/api/: api_config.py  app.py  endpoints.py  local_api_run.py  models.py
app/services/docx_crawler/: notes.md  run_docx_extraction.py
app/services/docx_crawler/extract/: config.py  extract.py
app/services/docx_crawler/translate/: config.py  exceptions.py  translate.py
tests/: conftest.py
tests/api/: api_integration_test.py
tests/resources/: client1.docx  mock_decimals.docx  mock_no_sae.docx
tests/services/docx_crawler/: extract_test.py  translate_test.py
