[project]
name = "medical-trials-data-extractor"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "pydantic-settings>=2.14.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "starlette<1.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
